--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">首页</a></li>
   <li><a href="{{ root_url }}/blog/archives">所有文章</a></li>
+  <li><a href="{{ root_url }}/blog/categories">分类文章</a></li>
 </ul>
