--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -11,7 +11,7 @@ body {
 }
 
 ::selection, ::-moz-selection, ::-webkit-selection {
-  background-color: $greyshade;
+  background-color: #DA4029;
   color: $color-background;
 }
 
@@ -116,7 +116,7 @@ body {
 							border-bottom: none;
 						}
 						blockquote {
-							border-left: 5px solid $greyshade;
+							border-left: 5px solid #DA4029;
 							background: #FCFCFC;
 						}
 						table {
@@ -153,7 +153,7 @@ body {
 							transition: color 0.3s;
 						}
 						a:hover {
-							color: $greyshade;
+							color: #DA4029;
 							-webkit-transition: color 0.3s;
 							-moz-transition: color 0.3s;
 							-o-transition: color 0.3s;
@@ -201,7 +201,7 @@ body {
 				text-shadow: 0 1px #333;
 			}
 			a:hover {
-				color: $greyshade;
+				color: #DA4029;
 			}
 			#sub-nav {
 				margin-top: 10px;
@@ -232,11 +232,11 @@ body {
 }
 
 a {
-	color: $greyshade;
+	color: #DA4029;
 }
 
 a:hover {
-	color: $greyshade;
+	color: #DA4029;
 }
 
 body {
