--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -7,15 +7,9 @@ single: true
 {% unless page.sharing == false %}
 	{% include post/sharing.html %}
 {% endunless %}
-{% if site.disqus_short_name and page.comments == true %}
+{% if site.comment_share and page.comments == true %}
 <section id="comment">
-    <h1 class="title">Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
+    <h1 class="title">评论</h1>
+	{% include post/uyan_comment.html %}
 </section>
 {% endif %}
-｛% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %｝
-  <section>
-    <h1>Comments</h1>
-    <div id="comments" aria-live="polite">｛% include post/duoshuo.html %｝</div>
-  </section>
-｛% endif %｝
